# HiMem

./: .gitignore  README.md  build.gradle  release_key.jks  settings.gradle
HiMem/: build.gradle
HiMem/src/main/: AndroidManifest.xml
HiMem/src/main/cpp/: CMakeLists.txt  block.cpp  class_layout.h  log.h  mem.cpp  mem.h  mem_callback.cpp  mem_callback.h  mem_hook.cpp  mem_hook.h  mem_native.cpp  mem_stack.cpp  mem_stack.h  mem_tracer.cpp  mem_tracer.h  mmap_tracer.cpp  mmap_tracer.h  object_helper.cpp  runtime.h
HiMem/src/main/cpp/clooper/: looper.cpp  looper_log.h  looper_test.cpp
HiMem/src/main/cpp/collection/: MemoryCache.cpp  MemoryCache.h
HiMem/src/main/cpp/fb_unwinder/: mem_stack_backup.cpp  mem_stack_backup.h  runtime.cpp  unwinder.cpp  unwinder.h  unwinder_android_700.h  unwinder_android_711.h  unwinder_android_712.h  unwinder_android_800.h  unwinder_android_810.h  unwinder_android_900.h  unwinder_wrapper.cpp  unwinder_wrapper.h
HiMem/src/main/cpp/fb_unwinder/arm/: unwinder_android_700.cpp  unwinder_android_711.cpp  unwinder_android_712.cpp  unwinder_android_800.cpp  unwinder_android_810.cpp  unwinder_android_900.cpp
HiMem/src/main/cpp/fb_unwinder/arm64/: unwinder_android_810.cpp  unwinder_android_900.cpp
HiMem/src/main/cpp/fb_unwinder/x86/: unwinder_android_700.cpp  unwinder_android_711.cpp  unwinder_android_712.cpp  unwinder_android_800.cpp  unwinder_android_810.cpp  unwinder_android_900.cpp
HiMem/src/main/cpp/fb_unwinder/x86_64/: unwinder_android_810.cpp  unwinder_android_900.cpp
HiMem/src/main/cpp/utils/: common_utils.cpp  common_utils.h
HiMem/src/main/cpp/xhook/: xh_core.c  xh_core.h  xh_elf.c  xh_jni.c  xh_util.c  xh_version.c  xhook.c  xhook.h  xhook_assist.cpp  xhook_assist.h
HiMem/src/main/cpp/xunwind/: xu_cfi.c  xu_formatter.c  xu_fp_arm64.c  xu_libbacktrace.c  xu_libcxx.c  xu_printer.c  xu_util.c  xunwind.c
HiMemAnalyzer/: .gitignore  himem.py  trace.himem.html
HiMemAnalyzer/data/: Event.py
HiMemAnalyzer/handler/: AllocHandler.py  BaseHandler.py  FreeHandler.py  MMAPHandler.py  MUNMAPHandler.py  __init__.py
HiMemAnalyzer/plot/: BarPlotMaker.py  BaseMaker.py  BokehPlotMaker.py  LinePlotMaker.py  PiePlotMaker.py  PlotHoverTest.py  PlotInfo.py  __init__.py
HiMemAnalyzer/utils/: ColorUtils.py  Log.py  SizeUtils.py  StackUtils.py  __init__.py
HiMemNoop/: build.gradle
MemHook/: build.gradle
MemHook/src/main/: AndroidManifest.xml
MemHook/src/main/cpp/: CMakeLists.txt  mem_hook.cpp  mem_native.cpp  mem_native.h  object_helper.h  runtime.cpp  runtime.h  unwinder.cpp
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.h  logger.h  mem_demo.cpp
app/src/main/res/layout/: activity_main.xml
doc/: trace_2.himem.html
docs/: trace_2.himem  trace_2.himem.html
gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
